Dark mode bug fixes (#13)
* Fixed the BreaCrumbs icon

* Fixed the text in the bookmarks asset list

* Fixing the header dark mode color

--- a/src/components/UserAssetsViewer/BookmarkAssetList.scss
+++ b/src/components/UserAssetsViewer/BookmarkAssetList.scss
@@ -16,12 +16,12 @@
   width: 100%;
 
   .bookmark-card-verse {
-    color: $text-color;
+    color: var(--ion-text-color);
   }
 
   .bookmark-card-citation {
     font-size: 12px;
-    color: $outline-color;
+    color: var(--ion-outline-color);
   }
 
   ion-card {
