--- a/src/pages/Tab2.scss
+++ b/src/pages/Tab2.scss
@@ -2,6 +2,10 @@ ion-buttons ion-button {
   height: 40px;
 }
 
+ion-toolbar {
+  --background: var(--ion-background-color);
+}
+
 ion-toolbar ion-title .toolbar-title {
   pointer-events: all !important;
 }
